fix issue with taskbar z-index being overridden by some bootswatch skins

--- a/modules/taskbar.less
+++ b/modules/taskbar.less
@@ -13,6 +13,11 @@
 	     -o-transition: opacity 150ms ease-in;
 	        transition: opacity 150ms ease-in;
 
+	// Bootswatch fix
+	&.navbar-fixed-bottom {
+		z-index: 10001;
+	}
+
 	&[data-active="1"] {
 		display: block;
 	}
